--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="../css/tailwind.min.css">
   </head>
   <body style="min-width: 300px;">
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-6 px-4 sm:px-3 lg:px-8">
