--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="../css/tailwind.min.css">
   </head>
 
   <body style="min-width: 300px;">
@@ -34,7 +34,7 @@
           </div>
     
           <div style="text-align: center;">
-            <button id="btn_signin" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <button id="btn_signin" onclick="onBtnClick()" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
               Sign in
             </button>
             <a href="register.html" class="text-center text-indigo-900">
@@ -44,5 +44,6 @@
         </form>
       </div>
     </div>
+    <script src="../js/login.js"></script>
   </body>
 </html>
