--- a/html/register.html
+++ b/html/register.html
@@ -36,7 +36,7 @@
             </div>
           </div>
     
-          <div id="error-dialog" class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" style="visibility: hidden;">
+          <div id="error-dialog" class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="error-dialog-modal-title" role="dialog" aria-modal="true" style="visibility: hidden;">
             <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
               <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
               <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
