--- a/html/passwords.html
+++ b/html/passwords.html
@@ -31,9 +31,11 @@
           <table class="min-w-full divide-y divide-gray-200">
             <tbody class="bg-white divide-y divide-gray-200">
               <script>
-                var passwords = JSON.parse(sessionStorage.passwords);
-                for(let i = 0; i < passwords.length; i++){
-                  displayPassword(passwords[i].id, passwords[i].website, passwords[i].username, passwords[i].password);
+                if(sessionStorage.passwords !== null && typeof(sessionStorage.passwords) !== 'undefined'){
+                  var passwords = JSON.parse(sessionStorage.passwords);
+                  for(let i = 0; i < passwords.length; i++){
+                    displayPassword(passwords[i].id, passwords[i].website, passwords[i].username, passwords[i].password);
+                  }
                 }
               </script>
             </tbody>
