Added aes encryption

--- a/html/passwords.html
+++ b/html/passwords.html
@@ -6,7 +6,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <link rel="stylesheet" href="../css/tailwind.min.css">
     <link rel="stylesheet" href="../css/passwords.css">
-    <script src="../js/prepasswords.js"></script> 
+    <script src="../js/aes.js"></script>
+    <script src="../js/prepasswords.js"></script>
   </head>
 
   <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6">
