Added Search bar

--- a/html/passwords.html
+++ b/html/passwords.html
@@ -18,7 +18,8 @@
         </h3>
       </div>
       <div class="ml-4 mt-2 flex-shrink-0">
-        <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+        <input type="text" id="search" onkeyup="filterPasswords()" class="relative inline-flex shadow focus:outline-none px-4 py-2 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-indigo-300 rounded-md" placeholder="Search">
+        <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
           Add Password
         </button>
       </div>
@@ -29,7 +30,7 @@
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-200">
+          <table id="table-passwords" class="min-w-full divide-y divide-gray-200">
             <tbody class="bg-white divide-y divide-gray-200">
               <script>
                 if(sessionStorage.passwords !== null && typeof(sessionStorage.passwords) !== 'undefined'){
