Changed variables that don't change to constants

--- a/html/passwords.html
+++ b/html/passwords.html
@@ -34,7 +34,7 @@
             <tbody class="bg-white divide-y divide-gray-200">
               <script>
                 if(sessionStorage.passwords !== null && typeof(sessionStorage.passwords) !== 'undefined'){
-                  var passwords = JSON.parse(sessionStorage.passwords);
+                  const passwords = JSON.parse(sessionStorage.passwords);
                   for(let i = 0; i < passwords.length; i++){
                     displayPassword(passwords[i].id, passwords[i].website, passwords[i].username, passwords[i].password);
                   }
