--- a/html/register.html
+++ b/html/register.html
@@ -8,11 +8,9 @@
   </head>
   <body style="min-width: 300px;">
     <div class="min-h-screen flex items-center justify-center bg-gray-50 py-6 px-4 sm:px-3 lg:px-8">
-      <div class="max-w-md w-full space-y-8">
+      <div class="max-w-md w-full space-y-6">
         <div>
-          <h2 class="text-center text-3xl font-extrabold text-indigo-900">
-            Passky
-          </h2>
+          <img class="mx-auto h-20 w-auto" src="../images/logo.png" alt="Passky">
         </div>
         <form class="mt-8 space-y-6" action="javascript:onBtnClick()">
           <input type="hidden" name="remember" value="true">
