Added additional layer of security

--- a/html/passwords.html
+++ b/html/passwords.html
@@ -100,7 +100,8 @@
     </div>
   </div>
 
-  <script src="../js/default-functions.js"></script> 
+  <script src="../js/default-functions.js"></script>
+  <script src="../js/sha512.js"></script>
   <script src="../js/passwords.js"></script>
   </body>
 </html>
