--- a/html/register.html
+++ b/html/register.html
@@ -76,6 +76,7 @@
       </div>
     </div>
     <script src="../js/default-functions.js"></script>
+    <script src="../js/sha512.js"></script>
     <script src="../js/register.js"></script>
   </body>
 </html>
