--- a/html/login.html
+++ b/html/login.html
@@ -74,6 +74,7 @@
       </div>
     </div>
     <script src="../js/default-functions.js"></script>
+    <script src="../js/sha512.js"></script>
     <script src="../js/login.js"></script>
   </body>
 </html>
