--- a/html/passwords.html
+++ b/html/passwords.html
@@ -10,21 +10,60 @@
     <script src="../js/prepasswords.js"></script>
   </head>
 
-  <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6">
-    <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-nowrap">
-      <div class="ml-4 mt-2">
-        <h3 class="text-lg leading-6 font-medium text-gray-900">
-          Passwords
-        </h3>
-      </div>
-      <div class="ml-4 mt-2 flex-shrink-0">
-        <input type="text" id="search" onkeyup="filterPasswords()" class="relative inline-flex shadow focus:outline-none px-4 py-2 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-indigo-300 rounded-md" placeholder="Search">
-        <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-          Add Password
-        </button>
+  <nav class="bg-white shadow">
+    <div class="max-w-7xl mx-auto px-2 sm:px-4 lg:px-8">
+      <div class="flex justify-between h-16">
+        <div class="flex px-2 lg:px-0">
+          <div class="flex-shrink-0 flex items-center">
+            <img class="block lg:hidden h-8 w-auto" src="../images/logo.png" alt="Passky">
+            <img class="hidden lg:block h-8 w-auto" src="../images/logo.png" alt="Passky">
+          </div>
+          <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
+            <a href="#" class="border-indigo-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              Passwords
+            </a>
+            <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              Import
+            </a>
+            <a href="#" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              Export
+            </a>
+            <a href="login.html" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+              Sign out
+            </a>
+          </div>
+        </div>
+        <div class="flex-1 flex items-center justify-center px-2 lg:ml-6 lg:justify-end">
+          <div class="flex-shrink-0">
+            <input type="text" id="search" onkeyup="filterPasswords()" class="relative inline-flex shadow focus:outline-none px-4 py-2 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border-indigo-300 rounded-md" placeholder="Search">
+            <button type="button" onclick="changeDialog(0); show('dialog');" class="relative inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              Add Password
+            </button>
+          </div>
+        </div>
+        <div class="flex items-center lg:hidden">
+          <button type="button" onclick="toggleMenu();" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none" aria-controls="mobile-menu" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg id="mobile-menu-icon" xmlns="http://www.w3.org/2000/svg" class="block h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <line x1="4" y1="6" x2="20" y2="6" />
+              <line x1="4" y1="12" x2="20" y2="12" />
+              <line x1="4" y1="18" x2="20" y2="18" />
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
+  
+    <div class="lg:hidden">
+      <div id="mobile-menu" class="hidden pt-2 pb-3 space-y-1">
+        <a href="#" class="bg-indigo-50 border-indigo-500 text-indigo-700 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Passwords</a>
+        <a href="#" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Import</a>
+        <a href="#" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Export</a>
+        <a href="login.html" class="border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800 block pl-3 pr-4 py-2 border-l-4 text-base font-medium">Sign out</a>
+      </div>
+    </div>
+  </nav>
 
   <div class="flex flex-col">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
