--- a/html/export.html
+++ b/html/export.html
@@ -234,6 +234,36 @@
                 </div>
             </div>
         </li>
+        <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
+          <div class="flex-1 flex flex-col p-8">
+              <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #d3f8f7;" src="../images/nordpass.png" alt="Nordpass">
+              <h3 class="mt-6 text-gray-900 text-lg font-medium">Nordpass</h3>
+          </div>
+          <div>
+              <div class="-mt-px flex divide-x divide-gray-200">
+              <div class="w-0 flex-1 flex">
+                  <a href="#" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                          <path d="M5 13v-8a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-5.5m-9.5 -2h7m-3 -3l3 3l-3 3" />
+                      </svg>
+                      <span class="ml-3">Import</span>
+                  </a>
+              </div>
+              <div class="-ml-px w-0 flex-1 flex">
+                  <a href="#" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                          <path d="M11.5 21h-4.5a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v5m-5 6h7m-3 -3l3 3l-3 3" />
+                      </svg>
+                      <span class="ml-3">Export</span>
+                  </a>
+              </div>
+              </div>
+          </div>
+      </li>
       </ul>
   </div>
 
