--- a/export.html
+++ b/export.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="../css/tailwind.min.css">
-    <link rel="stylesheet" href="../css/passwords.css">
-    <script src="../js/aes.js"></script>
+    <title>Passky</title>
+    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
+    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="css/passwords.css">
+    <script src="js/aes.js"></script>
   </head>
 
   <nav class="bg-white shadow">
@@ -14,8 +16,8 @@
       <div class="flex justify-between h-16">
         <div class="flex px-2 lg:px-0">
           <div class="flex-shrink-0 flex items-center">
-            <img class="block lg:hidden h-8 w-auto" src="../images/logo.png" alt="Passky">
-            <img class="hidden lg:block h-8 w-auto" src="../images/logo.png" alt="Passky">
+            <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
+            <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
           </div>
           <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
             <a href="passwords.html" class="border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
@@ -56,13 +58,13 @@
     <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #e6f5ff;" src="../images/logo.png" alt="Passky">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #e6f5ff;" src="images/logo.png" alt="Passky">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">Passky</h3>
             </div>
             <div>
                 <div class="-mt-px flex divide-x divide-gray-200">
                 <div class="w-0 flex-1 flex">
-                    <a href="#" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+                    <a href="javascript:changeDialog(1); show('dialog');" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M14 3v4a1 1 0 0 0 1 1h4" />
@@ -97,7 +99,7 @@
           </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #3c8dbc;" src="../images/bitwarden.png" alt="Bitwarden">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #3c8dbc;" src="images/bitwarden.png" alt="Bitwarden">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">Bitwarden</h3>
             </div>
             <div>
@@ -127,7 +129,7 @@
         </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #d12f2e;" src="../images/lastpass.png" alt="Lastpass">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #d12f2e;" src="images/lastpass.png" alt="Lastpass">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">Lastpass</h3>
             </div>
             <div>
@@ -143,7 +145,7 @@
                     </a>
                 </div>
                 <div class="-ml-px w-0 flex-1 flex">
-                    <a href="#" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
+                    <a href="javascript:export_lastpass()" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M14 3v4a1 1 0 0 0 1 1h4" />
@@ -157,7 +159,7 @@
         </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #0e353d;" src="../images/dashline.png" alt="Dashline">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #0e353d;" src="images/dashline.png" alt="Dashline">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">Dashline</h3>
             </div>
             <div>
@@ -187,7 +189,7 @@
         </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #fff;" src="../images/1password.svg" alt="1Password">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #fff;" src="images/1password.svg" alt="1Password">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">1Password</h3>
             </div>
             <div>
@@ -217,7 +219,7 @@
         </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
             <div class="flex-1 flex flex-col p-8">
-                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #fff;" src="../images/keeper.png" alt="Keeper">
+                <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #fff;" src="images/keeper.png" alt="Keeper">
                 <h3 class="mt-6 text-gray-900 text-lg font-medium">Keeper</h3>
             </div>
             <div>
@@ -247,7 +249,7 @@
         </li>
         <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
           <div class="flex-1 flex flex-col p-8">
-              <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #d3f8f7;" src="../images/nordpass.png" alt="Nordpass">
+              <img class="w-24 h-24 flex-shrink-0 mx-auto rounded-full" style="background-color: #d3f8f7;" src="images/nordpass.png" alt="Nordpass">
               <h3 class="mt-6 text-gray-900 text-lg font-medium">Nordpass</h3>
           </div>
           <div>
@@ -311,9 +313,8 @@
       </div>
     </div>
   </div>
-
-  <script src="../js/default-functions.js"></script>
-  <script src="../js/sha512.js"></script>
-  <script src="../js/export.js"></script>
+  <script src="js/default-functions.js"></script>
+  <script src="js/sha512.js"></script>
+  <script src="js/export.js"></script>
   </body>
 </html>
