--- a/passwords.html
+++ b/passwords.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="../css/tailwind.min.css">
-    <link rel="stylesheet" href="../css/passwords.css">
-    <script src="../js/aes.js"></script>
-    <script src="../js/prepasswords.js"></script>
+    <title>Passky</title>
+    <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
+    <link rel="stylesheet" href="css/tailwind.min.css">
+    <link rel="stylesheet" href="css/passwords.css">
+    <script src="js/aes.js"></script>
+    <script src="js/prepasswords.js"></script>
   </head>
 
   <nav class="bg-white shadow">
@@ -15,8 +17,8 @@
       <div class="flex justify-between h-16">
         <div class="flex px-2 lg:px-0">
           <div class="flex-shrink-0 flex items-center">
-            <img class="block lg:hidden h-8 w-auto" src="../images/logo.png" alt="Passky">
-            <img class="hidden lg:block h-8 w-auto" src="../images/logo.png" alt="Passky">
+            <img class="block lg:hidden h-8 w-auto" src="images/logo.png" alt="Passky">
+            <img class="hidden lg:block h-8 w-auto" src="images/logo.png" alt="Passky">
           </div>
           <div class="hidden lg:ml-6 lg:flex lg:space-x-8">
             <a href="#" class="border-indigo-500 text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
@@ -135,8 +137,8 @@
     </div>
   </div>
 
-  <script src="../js/default-functions.js"></script>
-  <script src="../js/sha512.js"></script>
-  <script src="../js/passwords.js"></script>
+  <script src="js/default-functions.js"></script>
+  <script src="js/sha512.js"></script>
+  <script src="js/passwords.js"></script>
   </body>
 </html>
